data/derived/comb/progs/unify/prog7017.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 1);;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type unit -> unit
       Type int is not compatible with type unit 
